[package]
name = "protocol_types"
version = "0.1.0"
authors = ["ParallelChain Lab <info@parallelchain.io>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.1"
prost = "0.9"

[build-dependencies]
prost-build = { version = "0.9" }