[package]
name = "pchain-types"
version = "0.1.0"
authors = ["ParallelChain Lab <info@parallelchain.io>"]
edition = "2021"
description = "parallelchain-protocol-types: Communication protocols used in ParallelChain Mainnet"
license = "GPL-3.0"
repository = "https://github.com/parallelchain-io/parallelchain-protocol-types/protocol_types"

[dependencies]
bytes = "1.1"
prost = "0.9"

[build-dependencies]
prost-build = { version = "0.9" }
