[package]
name = "pchain-types"
version = "0.2.0"
edition = "2018"
description = "parallelchain-protocol-types: Communication protocols used in ParallelChain Mainnet"
license = "GPL-3.0"
repository = "https://github.com/parallelchain-io/parallelchain-protocol-types"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
rand = "0.7"

[dependencies]
base64 = "0.13"
